--- a/index.html
+++ b/index.html
@@ -11,16 +11,54 @@
 </head>
 <body>
 <div id="wrapper">
-    <button class="back-to-top hidden">Back To Top</button>
+    <button class="back-to-top btn btn-outline-secondary hidden">Back To Top</button>
     <nav id="navBar">
         <ul id="navItems">
-            <li>About</li>
+            <li><a href="#about">About</a></li>
             <li>Projects</li>
-            <li>Contact</li>
         </ul>
     </nav>
-    <div id="about">
-
+    <div id="about" class="row">
+        <div id="avatarCard" class="col-10 card mb-3">
+            <img src="img/planetbackground" class="card-img-top" alt="Avatar background">
+            <img src="img/portfolioimg.jpeg" class="card-img-avatar" alt="Avatar">
+            <div class="card-body">
+                <div class="aboutHeader row">
+                    <text class="aboutHeader text-center col-6 fw-bold">Chase Forestello&nbsp;&nbsp;</text>
+                    <text class="aboutHeader text-center col-6 fw-bold">&nbsp;&nbsp;Software Developer</text>
+                </div>
+                <p class="card-text text-center">Software developer with previous experience in project management and team
+                    operations logistics. Dedicated to writing clean code that delivers seamless, intuitive, secure, and
+                    efficient experiences.</p>
+                <div id="languageAndTools" class="text-center">
+                <h3>Languages and Tools:</h3>
+                    <img alt="IntelliJ" width="26px" src="https://img.icons8.com/color/48/000000/intellij-idea.png">
+                    <img alt="HTML5" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png">
+                    <img alt="CSS3" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png">
+                    <img alt="JavaScript" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png">
+                    <img alt="Java" width="26px"
+                         src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png">
+                    <img alt="Spring Boot" width="26px" src="https://img.icons8.com/color/48/000000/spring-logo.png">
+                    <img alt="MySQL" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png">
+                    <img alt="Git" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png">
+                    <img alt="GitHub" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png">
+                    <img alt="Terminal" width="26px"
+                         src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/terminal/terminal.png"/>
+                </div>
+                <hr>
+                <div id="contactIcons">
+                    <a href="mailto:chase.forestello@gmail.com" target="blank"><i class="fas icon fa-envelope-open"></i></a>
+                    <a href="https://github.com/Chase-Forestello" target="blank"><i class="fab icon fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/chase-forestello/" target="blank"><i class="fab icon fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
