--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="about" class="row">
         <div id="avatarCard" class="col-10 card mb-3">
             <img src="img/planetbackground" class="card-img-top" alt="Avatar background">
-            <img src="img/portfolioimg.jpeg" class="card-img-avatar" alt="Avatar">
+            <img src="img/portfolioimg.jpeg" class="card-img-avatar rounded-circle" alt="Avatar">
             <div class="card-body">
                 <div class="aboutHeader row">
                     <text class="aboutHeader text-center col-6 fw-bold">Chase Forestello&nbsp;&nbsp;</text>
@@ -32,23 +32,23 @@
                     efficient experiences.</p>
                 <div id="languageAndTools" class="text-center">
                 <h3>Languages and Tools:</h3>
-                    <img alt="IntelliJ" width="26px" src="https://img.icons8.com/color/48/000000/intellij-idea.png">
-                    <img alt="HTML5" width="26px"
+                    <img class="toolIcon" alt="IntelliJ" width="26px" src="https://img.icons8.com/color/48/000000/intellij-idea.png">
+                    <img class="toolIcon" alt="HTML5" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png">
-                    <img alt="CSS3" width="26px"
+                    <img class="toolIcon" alt="CSS3" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png">
-                    <img alt="JavaScript" width="26px"
+                    <img class="toolIcon" alt="JavaScript" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png">
-                    <img alt="Java" width="26px"
+                    <img class="toolIcon" alt="Java" width="26px"
                          src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png">
-                    <img alt="Spring Boot" width="26px" src="https://img.icons8.com/color/48/000000/spring-logo.png">
-                    <img alt="MySQL" width="26px"
+                    <img class="toolIcon" alt="Spring Boot" width="26px" src="https://img.icons8.com/color/48/000000/spring-logo.png">
+                    <img class="toolIcon" alt="MySQL" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png">
-                    <img alt="Git" width="26px"
+                    <img class="toolIcon" alt="Git" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png">
-                    <img alt="GitHub" width="26px"
+                    <img class="toolIcon" alt="GitHub" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png">
-                    <img alt="Terminal" width="26px"
+                    <img class="toolIcon" alt="Terminal" width="26px"
                          src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/terminal/terminal.png"/>
                 </div>
                 <hr>
