--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>Chase Forestello - Software Developer - Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,11 +12,19 @@
 <body>
 <div id="wrapper">
     <button class="back-to-top btn btn-outline-secondary hidden">Back To Top</button>
-    <nav id="navBar">
-        <ul id="navItems">
-            <li><a href="#about">About</a></li>
-            <li>Projects</li>
-        </ul>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#about">About</a>
+                    <a class="nav-link" href="#">Projects</a>
+                </div>
+            </div>
+        </div>
     </nav>
     <div class="container">
         <div id="about" class="row">
@@ -28,7 +36,7 @@
                         <text class="aboutHeader1 aboutHeader text-center col fw-bold">Chase Forestello&nbsp;&nbsp;</text>
                         <text class="aboutHeader2 aboutHeader text-center col fw-bold">&nbsp;&nbsp;Software Developer</text>
                     </div>
-                    <p class="card-text text-center">Software developer with previous experience in project management
+                    <p class="card-text aboutText text-center">Software developer with previous experience in project management
                         and team
                         operations logistics. Dedicated to writing clean code that delivers seamless, intuitive, secure,
                         and
@@ -58,11 +66,28 @@
                     </div>
                     <hr>
                     <div id="contactIcons">
-                        <a href="mailto:chase.forestello@gmail.com" target="blank"><i
-                                class="fas icon fa-envelope-open"></i></a>
+                        <a href="mailto:chase.forestello@gmail.com" target="blank"><i class="fas icon fa-envelope-open"></i></a>
                         <a href="https://github.com/Chase-Forestello" target="blank"><i class="fab icon fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/chase-forestello/" target="blank"><i
-                                class="fab icon fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/chase-forestello/" target="blank"><i class="fab icon fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="img/cafesalastelloss.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div id="test">
+
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Café Salastello</h5>
+                            <p class="card-text">A paired-programming web application with basic CRUD functionality. This project consists of a coffee website built with HTML that serves as a filing cabinet for various roasts of coffee using CSS and Bootstrap for styling. Through features implementing JavaScript DOM manipulation, users can search for, add or remove coffees, and also provide descriptions for those coffees.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
                 </div>
             </div>
