messing around with project card sizing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -33,10 +34,13 @@
                 <img src="img/portfolioimg.jpeg" class="card-img-avatar rounded-circle" alt="Avatar">
                 <div class="card-body">
                     <div class="aboutHeader row">
-                        <text class="aboutHeader1 aboutHeader text-center col fw-bold">Chase Forestello&nbsp;&nbsp;</text>
-                        <text class="aboutHeader2 aboutHeader text-center col fw-bold">&nbsp;&nbsp;Software Developer</text>
+                        <text class="aboutHeader1 aboutHeader text-center col fw-bold">Chase Forestello&nbsp;&nbsp;
+                        </text>
+                        <text class="aboutHeader2 aboutHeader text-center col fw-bold">&nbsp;&nbsp;Software Developer
+                        </text>
                     </div>
-                    <p class="card-text aboutText text-center">Software developer with previous experience in project management
+                    <p class="card-text aboutText text-center">Software developer with previous experience in project
+                        management
                         and team
                         operations logistics. Dedicated to writing clean code that delivers seamless, intuitive, secure,
                         and
@@ -66,27 +70,34 @@
                     </div>
                     <hr>
                     <div id="contactIcons">
-                        <a href="mailto:chase.forestello@gmail.com" target="blank"><i class="fas icon fa-envelope-open"></i></a>
+                        <a href="mailto:chase.forestello@gmail.com" target="blank"><i
+                                class="fas icon fa-envelope-open"></i></a>
                         <a href="https://github.com/Chase-Forestello" target="blank"><i class="fab icon fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/chase-forestello/" target="blank"><i class="fab icon fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/chase-forestello/" target="blank"><i
+                                class="fab icon fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="img/cafesalastelloss.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div id="test">
-
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Café Salastello</h5>
-                            <p class="card-text">A paired-programming web application with basic CRUD functionality. This project consists of a coffee website built with HTML that serves as a filing cabinet for various roasts of coffee using CSS and Bootstrap for styling. Through features implementing JavaScript DOM manipulation, users can search for, add or remove coffees, and also provide descriptions for those coffees.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div id="projectCardContainer" class="card">
+                <div id="cafesalastelloCard" class="card mb-3">
+                    <div class="row">
+                        <div class="col">
+                            <img src="img/cafesalastelloss.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div id="test">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Café Salastello</h5>
+                                <p class="card-text">A paired-programming web application with basic CRUD functionality.
+                                    This project consists of a coffee website built with HTML that serves as a filing
+                                    cabinet for various roasts of coffee using CSS and Bootstrap for styling. Through
+                                    features implementing JavaScript DOM manipulation, users can search for, add or
+                                    remove coffees, and also provide descriptions for those coffees.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
                         </div>
                     </div>
                 </div>
