added weathermap project card

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         <div class="container">
             <div id="projectCardContainer" class="card">
                 <h3 class="card-title text-center mt-2">Projects</h3>
-                <hr id="projectsHr">
-                <div id="cafesalastelloCard" class="card mb-3">
+                <hr class="projectsHr">
+                <div class="projectCards" class="card mb-3">
                     <div class="row">
                         <div class="col">
-                            <img src="img/cafesalastelloss.png" class="img-fluid rounded-start" alt="...">
+                            <img src="img/cafesalastelloss.png" class="img-fluid rounded-start" alt="cafesalastello screenshot">
                         </div>
                         <div class="col-12">
                             <div class="card-body text-center">
@@ -96,7 +96,29 @@
                                     cabinet for various roasts of coffee using CSS and Bootstrap for styling. Through
                                     features implementing JavaScript DOM manipulation, users can search for, add or
                                     remove coffees, and also provide descriptions for those coffees.</p>
-                                <div id="projectBtns">
+                                <div id="class">
+                                    <a href="https://github.com/Chase-Forestello/cafe-salastello" target="_blank" class="btn btn-primary text-nowrap projectBtns projectGithubBtn">GitHub</a>
+                                    <a href="https://chase-forestello.github.io/cafe-salastello/" target="_blank" class="btn btn-primary text-nowrap projectBtns">Live Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="projectsHr">
+                <div class="projectCards" class="card mb-3">
+                    <div class="row">
+                        <div class="col">
+                            <img src="img/weathermapss.png" class="img-fluid rounded-start" alt="weathermap screenshot">
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body text-center">
+                                <h5 class="card-title fs-2">Café Salastello</h5>
+                                <p class="card-text">A paired-programming web application with basic CRUD functionality.
+                                    This project consists of a coffee website built with HTML that serves as a filing
+                                    cabinet for various roasts of coffee using CSS and Bootstrap for styling. Through
+                                    features implementing JavaScript DOM manipulation, users can search for, add or
+                                    remove coffees, and also provide descriptions for those coffees.</p>
+                                <div class="projectBtns">
                                     <a href="https://github.com/Chase-Forestello/cafe-salastello" target="_blank" class="btn btn-primary text-nowrap projectBtns projectGithubBtn">GitHub</a>
                                     <a href="https://chase-forestello.github.io/cafe-salastello/" target="_blank" class="btn btn-primary text-nowrap projectBtns">Live Demo</a>
                                 </div>
