fixed project cards

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                         Through
                                         features implementing JavaScript DOM manipulation, users can search for, add or
                                         remove coffees, and also provide descriptions for those coffees.</p>
-                                    <div id="class">
+                                    <div>
                                         <a href="https://github.com/Chase-Forestello/cafe-salastello" target="_blank"
                                            class="btn btn-primary text-nowrap projectBtns projectGithubBtn">GitHub</a>
                                         <a href="https://chase-forestello.github.io/cafe-salastello/" target="_blank"
@@ -129,10 +129,10 @@
                                         back a 5 day weather forecast for that area. A marker is dropped which behaves
                                         dynamically allowing the user to drag
                                         to new locations. CSS and Bootstrap were used for styling.</p>
-                                    <div class="projectBtns">
-                                        <a href="https://github.com/Chase-Forestello/weathermap" target="_blank"
+                                    <div>
+                                        <a href="https://github.com/Chase-Forestello/cafe-salastello" target="_blank"
                                            class="btn btn-primary text-nowrap projectBtns projectGithubBtn">GitHub</a>
-                                        <a href="https://chase-forestello.github.io/weathermap/" target="_blank"
+                                        <a href="https://chase-forestello.github.io/cafe-salastello/" target="_blank"
                                            class="btn btn-primary text-nowrap projectBtns">Live Demo</a>
                                     </div>
                                 </div>
