--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                                         dynamically allowing the user to drag
                                         to new locations. CSS and Bootstrap were used for styling.</p>
                                     <div>
-                                        <a href="https://github.com/Chase-Forestello/cafe-salastello" target="_blank"
+                                        <a href="https://github.com/Chase-Forestello/weathermap" target="_blank"
                                            class="btn btn-primary text-nowrap projectBtns projectGithubBtn">GitHub</a>
-                                        <a href="https://chase-forestello.github.io/cafe-salastello/" target="_blank"
+                                        <a href="https://chase-forestello.github.io/weathermap/" target="_blank"
                                            class="btn btn-primary text-nowrap projectBtns">Live Demo</a>
                                     </div>
                                 </div>
