--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div id="projectCardContainer" class="card">
+                <div id="projectCardContainer" class="row card">
                     <h3 class="card-title text-center mt-2">Projects</h3>
                     <hr class="projectsHr">
-                    <div class="projectCards" class="card col-6 mb-3">
+                    <div class="projectCards card col-12 mb-3">
                         <div class="row">
                             <div class="col">
                                 <img src="img/cafesalastelloss.png" class="img-fluid rounded-start"
@@ -111,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="projectCards" class="card col-6 mb-3">
+                    <div class="projectCards card col-3 mb-3">
                         <div class="row">
                             <div class="col">
                                 <img src="img/weathermapss.png" class="img-fluid rounded-start"
@@ -140,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
