--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <title>Profle Card Html & CSS | MultiWebPress </title>
+    <title>Chase Forestello | Web Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,23 +20,23 @@ topFunction()" id="myBtn" title="Go to top">Top
 </button>
 <nav class="navbar sticky-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://github.com/Chase-Forestello" target="_blank">
             <span id="navbarLogo">&lt; / &gt;</span><span class="navbar-text">Chase Forestello</span>
         </a>
     </div>
 </nav>
-<div class="container">
-    <div class="profileCard col-8">
+<div class="container row">
+    <div class="profileCard col-md-8">
         <h2>Full-Stack Web Developer</h2>
         <p id="profileCardBio">Dedicated to writing clean code that delivers seamless, intuitive, secure, and efficient experiences.
             I am highly adaptable and can quickly find solutions with the tools and skills I have.
-            Organization and structure are my primary focuses. </p>
+            Organization and structure are my primary focuses.<br><br>Check out my projects down below!</p>
         <div class="buttons">
             <div class="bottom-section">
                 <div class="social-media">
-                    <a href="#"><i class="fab contactLink fa-linkedin"></i></a>
-                    <a href="#"><i class="fab contactLink fa-github"></i></a>
-                    <a href="#"><i class="fas contactLink fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/chase-forestello/" target="_blank"><i class="fab contactLink fa-linkedin"></i></a>
+                    <a href="https://github.com/Chase-Forestello" target="_blank"><i class="fab contactLink fa-github"></i></a>
+                    <a href = "mailto: chase.forestello@gmail.com" target="_blank"><i class="fas contactLink fa-envelope"></i></a>
                 </div>
             </div>
         </div>
@@ -46,18 +45,29 @@ topFunction()" id="myBtn" title="Go to top">Top
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>Bootstrap</li>
                 <li>JavaScript</li>
-                <li>PHP</li>
-                <li>React JS</li>
-                <li>Python</li>
-                <li>Django</li>
-                <li>WordPress</li>
-                <li>Shopify</li>
+                <li>Java</li>
+                <li>Spring</li>
+                <li>Hibernate</li>
+                <li>MySQL</li>
+                <li>Database Design</li>
+                <li>OOP</li>
+                <li>RESTful API's</li>
+                <li>Single-page Applications</li>
+                <li>Test-Driven Development</li>
+                <li>Swagger</li>
+                <li>Version Control with Git</li>
+                <li>GitHub</li>
+                <li>GitHub Projects</li>
+                <li>SCRUM</li>
+                <li>Paired Programming</li>
+                <li>Mobile First Development</li>
             </ul>
         </div>
     </div>
     <div id="projectContainer" class="row">
-        <div class="projectCard col-md-5">
+        <div class="projectCard col-lg-5">
             <h2>GameFace</h2>
             <p>GameFace is a single-page application social media platform that allows gamers to connect with other gamers in order to enhance their gaming experience. GameFace users are able to create and personalize their profile based on platform of choice, gamertags, and favorite games. Additionally, GameFace users connect with posts, likes, comments, and highlights. GameFace gives users the ability to find gaming partners based on games played, region, skill, and play style. Ultimately, GameFace is a networking solution that allows users to connect and grow as gamers in a safe and inclusive environment. </p>
             <div class="buttons">
@@ -65,7 +75,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <div class="social-media projectLinks">
                         <a href="https://github.com/GameFaceProductions/GameFace" target="_blank"><i class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                        <a href="https://game-face.io/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Demo</span>
+                        <a href="https://game-face.io/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -78,6 +88,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>Bootstrap</li>
                     <li>JavaScript</li>
                     <li>Java</li>
+                    <li>CRUD</li>
                     <li>Spring Boot</li>
                     <li>Amazon RDS</li>
                     <li>Filestack API</li>
@@ -86,7 +97,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                 </ul>
             </div>
         </div>
-        <div class="projectCard col-md-5">
+        <div class="projectCard col-lg-5">
             <h2>Weather Map</h2>
             <p>An interactive paired-programming web application with geolocation, geocoding, and the OpenWeather Weather API. This project utilizes the OpenWeather API, JavaScript, and HTML to allow users to enter any location based on name, address, coordinates, or direct marker selection and receive back a 5 day weather forecast for that area. A marker is dropped which behaves dynamically allowing the user to drag to new locations.</p>
             <div class="buttons">
@@ -94,7 +105,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <div class="social-media projectLinks">
                         <a title="GitHub" href="https://github.com/Chase-Forestello/ryan-chase-weathermap" target="_blank"><i class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                            <a title="Demo" href="https://chase-forestello.github.io/weathermap/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Demo</span>
+                            <a title="Demo" href="https://chase-forestello.github.io/weathermap/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -113,7 +124,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                 </ul>
             </div>
         </div>
-        <div class="projectCard col-md-5">
+        <div class="projectCard col-lg-5">
             <h2>Movie Search Engine</h2>
             <p>A paired-programming single-page application with CRUD functionality. This project allows users to search for movies by name and returns a card with the movie poster, title, director, genres, and plot summary. Through HTML and JavaScript DOM manipulation, users can add, edit, or delete movies from the collection through various modal prompts. The search engine makes use of The Movie Database API (TMDB) and Glitch to serve the backend.</p>
             <div class="buttons">
@@ -131,19 +142,20 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>CSS</li>
                     <li>Bootstrap</li>
                     <li>JavaScript</li>
+                    <li>CRUD</li>
                     <li>The Movie Database API</li>
                 </ul>
             </div>
         </div>
-        <div class="projectCard col-md-5">
-            <h2>Weather Map</h2>
-            <p>An interactive paired-programming web application with geolocation, geocoding, and the OpenWeather Weather API. This project utilizes the OpenWeather API, JavaScript, and HTML to allow users to enter any location based on name, address, coordinates, or direct marker selection and receive back a 5 day weather forecast for that area. A marker is dropped which behaves dynamically allowing the user to drag to new locations.</p>
+        <div class="projectCard col-lg-5">
+            <h2>Café Salastello</h2>
+            <p>A paired-programming web application with basic in memory CRUD functionality. This project consists of a coffee website built with HTML that serves as a filing cabinet for various roasts of coffee. Through features implementing JavaScript DOM manipulation, users can search for, add or remove coffees, and also provide descriptions for those coffees.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Chase-Forestello/ryan-chase-weathermap" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/coffee-chase-darien" target="_blank"><i class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                            <a title="Demo" href="https://chase-forestello.github.io/weathermap/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Demo</span>
+                            <a title="Demo" href="https://chase-forestello.github.io/cafe-salastello/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -156,9 +168,54 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>CSS</li>
                     <li>Bootstrap</li>
                     <li>JavaScript</li>
-                    <li>OpenWeather API</li>
-                    <li>Geocoding</li>
-                    <li>Geolocation</li>
+                    <li>In-memory CRUD</li>
+                </ul>
+            </div>
+        </div>
+        <div class="projectCard col-lg-5">
+            <h2>Console Adventure Game</h2>
+            <p>Simple console based Java adventure game. This solo project allows a user to create a fantasy character and embark on a choose-your-own-adventure game built solely with Java.</p>
+            <div class="buttons">
+                <div class="bottom-section">
+                    <div class="social-media projectLinks">
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/codeup-java-exercises/tree/main/src/rpg_console_game" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+
+                <h6>Tools Used</h6>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
+                    <li>In-memory CRUD</li>
+                </ul>
+            </div>
+        </div>
+        <div class="projectCard col-lg-5">
+            <h2>Konami Code</h2>
+            <p>A simple, fun, and interactive Konami code experience utilizing HTML, CSS, and JavaScript.</p>
+            <div class="buttons">
+                <div class="bottom-section">
+                    <div class="social-media projectLinks">
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/konami" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <div class="demoDiv">
+                            <a title="Demo" href="https://chase-forestello.github.io/konami/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+
+                <h6>Tools Used</h6>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
+                    <li>In-memory CRUD</li>
                 </ul>
             </div>
         </div>
