--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>JavaScript</li>
                     <li>CRUD</li>
                     <li>The Movie Database API</li>
+                    <li>Glitch</li>
                 </ul>
             </div>
         </div>
@@ -186,11 +187,7 @@ topFunction()" id="myBtn" title="Go to top">Top
 
                 <h6>Tools Used</h6>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Bootstrap</li>
-                    <li>JavaScript</li>
-                    <li>In-memory CRUD</li>
+                    <li>Java</li>
                 </ul>
             </div>
         </div>
@@ -215,7 +212,6 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>CSS</li>
                     <li>Bootstrap</li>
                     <li>JavaScript</li>
-                    <li>In-memory CRUD</li>
                 </ul>
             </div>
         </div>
