--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Chase Forestello | Web Developer</title>
+    <title>Chase Forestello | Software Developer</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/26f09e8c8b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,7 +27,7 @@ topFunction()" id="myBtn" title="Go to top">Top
 </nav>
 <div class="container row">
     <div class="profileCard col-md-8">
-        <h2>Full-Stack Web Developer</h2>
+        <h2>Full-Stack Software Developer</h2>
         <p id="profileCardBio">Dedicated to writing clean code that delivers seamless, intuitive, secure, and efficient
             experiences.
             I am highly adaptable and can quickly find solutions with the tools and skills I have.
