--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                 <li>CSS</li>
                 <li>Bootstrap</li>
                 <li>JavaScript</li>
+                <li>React</li>
                 <li>Java</li>
                 <li>Spring</li>
                 <li>Hibernate</li>
