--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                 <li>JavaScript</li>
                 <li>React</li>
                 <li>Java</li>
-                <li>Spring</li>
+                <li>Spring Boot</li>
                 <li>Hibernate</li>
                 <li>MySQL</li>
                 <li>Database Design</li>
@@ -108,6 +108,37 @@ topFunction()" id="myBtn" title="Go to top">Top
                     <li>Filestack API</li>
                     <li>RAWG API</li>
                     <li>Google Authentication</li>
+                </ul>
+            </div>
+        </div>
+        <div class="projectCard col-lg-5">
+            <h2>Hangry</h2>
+            <p>[In development] Hangry is a solo-project SPA that serves as a magic 8-ball for users to find a place to eat based on the entered location.</p>
+            <div class="buttons">
+                <div class="bottom-section">
+                    <div class="social-media projectLinks">
+                        <a title="GitHub" href="https://github.com/HangryDevelopment"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <div class="demoDiv">
+                            <a title="Demo" href="https://hangrydevelopment.github.io/HangryFrontend/" target="_blank"><i
+                                    class="fas projectLink fa-play"></i></a><span>Live</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+                <h6>Tools Used</h6>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Java</li>
+                    <li>Spring Boot</li>
+                    <li>Yelp Fusion API</li>
+                    <li>Geocoding</li>
+                    <li>Geolocation</li>
                 </ul>
             </div>
         </div>
