modified hangry card

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ topFunction()" id="myBtn" title="Go to top">Top
         </div>
         <div class="projectCard col-lg-5">
             <h2>Hangry</h2>
-            <p>[In development] Hangry is a solo-project SPA that serves as a magic 8-ball for users to find a place to eat based on the entered location.</p>
+            <p>[In development] Hangry is a solo-project SPA that serves as a magic 8-ball for users to find a place to eat based on the entered location. The frontend is built on HTML, CSS, Bootstrap, and React using the Yelp Fusion API and the backend is built on Spring Boot using AWS.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
