--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                             class="fab contactLink fa-github"></i></a>
                     <a href="mailto: chase.forestello@gmail.com"><i class="fas contactLink fa-envelope"></i></a>
                     <div id="resumeDiv">
-                        <a href="https://drive.google.com/file/d/1SmpTz8ZXOxrQMuuNHQ6fIZzs3t4pWXSa/view?usp=sharing" target="_blank"><i class="fa-solid contactLink fa-file"></i></a><span>Resume</span>
+                        <a href="https://drive.google.com/file/d/1NpAyK3U1s2Y5epMKEsDCa6T_w2lVZ5g-/view?usp=sharing" target="_blank"><i class="fa-solid contactLink fa-file"></i></a><span>Resume</span>
                     </div>
                 </div>
             </div>
@@ -67,6 +67,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                 <li>Version Control with Git</li>
                 <li>GitHub</li>
                 <li>GitHub Projects</li>
+                <li>AWS</li>
                 <li>SCRUM</li>
                 <li>Paired Programming</li>
                 <li>Mobile First Development</li>
