--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 topFunction()" id="myBtn" title="Go to top">Top
 </button>
 <nav class="navbar sticky-top bg-dark">
-    <div class="container-fluid">
+    <div class="container-fluid navbar-logo-name">
         <a class="navbar-brand" href="https://github.com/Chase-Forestello" target="_blank">
             <span id="navbarLogo">&lt; / &gt;</span><span class="navbar-text">Chase Forestello</span>
         </a>
