--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ topFunction()" id="myBtn" title="Go to top">Top
 </nav>
 <div class="container row">
     <div class="profileCard col-md-8">
-        <h2>Full-Stack Software Developer</h2>
+        <h2>Front-End Web Developer</h2>
         <p id="profileCardBio">Dedicated to writing clean code that delivers seamless, intuitive, secure, and efficient
             experiences.
             I am highly adaptable and can quickly find solutions with the tools and skills I have.
