--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ topFunction()" id="myBtn" title="Go to top">Top
                             class="fab contactLink fa-github"></i></a>
                     <a href="mailto: chase.forestello@gmail.com"><i class="fas contactLink fa-envelope"></i></a>
                     <div id="resumeDiv">
-                        <a href="https://drive.google.com/file/d/1SJohkmOUNvWgFL4zKa4eGXphAdv4gorJ/view?usp=sharing" target="_blank"><i class="fa-solid contactLink fa-file"></i></a><span>Resume</span>
+                        <a href="https://drive.google.com/file/d/10OP7uRitHl0674L-S9-9PiaAS5QYprB_/view" target="_blank"><i class="fa-solid contactLink fa-file"></i></a><span>Resume</span>
                     </div>
                 </div>
             </div>
