added movie search engine react refactor

--- a/index.html
+++ b/index.html
@@ -146,6 +146,31 @@ topFunction()" id="myBtn" title="Go to top">Top
             </div>
         </div>
         <div class="projectCard col-lg-5">
+            <h2>Movie Search Engine<br>[React.js Refactor]</h2>
+            <p>This project is a refactor of "Move Search Engine" using React, but does not include CRUD or a backend. This single page application
+                allows user to search for movies by name and returns a poster, rating, overview, and release date.</p>
+            <div class="buttons">
+                <div class="bottom-section">
+                    <div class="social-media projectLinks">
+                        <a title="GitHub" href="https://github.com/Shaquielle-Chase-MovieOrg/movies-shaquielle-chase"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+
+                <h6>Tools Used</h6>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JavaScript</li>
+                    <li>React.js</li>
+                    <li>The Movie Database API</li>
+                </ul>
+            </div>
+        </div>
+        <div class="projectCard col-lg-5">
             <h2>Movie Search Engine</h2>
             <p>A paired-programming single-page application with CRUD functionality. This project allows users to search
                 for movies by name and returns a card with the movie poster, title, director, genres, and plot summary.
