fixed movie link

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ topFunction()"
                 <div class="demoDiv">
                   <a
                     title="Demo"
-                    href="chase-forestello.github.io/movie-app/"
+                    href="https://chase-forestello.github.io/movie-app/"
                     target="_blank"
                     ><i class="fas projectLink fa-play"></i></a
                   ><span>Live</span>
